--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@elizaos/plugin-twitter",
-  "version": "1.0.1",
+  "name": "twitter-client",
+  "version": "1.0.0",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -18,7 +18,6 @@
     "dist"
   ],
   "dependencies": {
-    "@elizaos/core": "^1.0.2",
     "@sinclair/typebox": "^0.34.33",
     "glob": "11.0.2",
     "headers-polyfill": "^4.0.3",
@@ -27,16 +26,16 @@
     "set-cookie-parser": "^2.7.1",
     "tough-cookie": "^5.1.2",
     "twitter-api-v2": "^1.23.2",
-    "typescript": "^5.8.3",
+    "typescript": "^5.2.2",
     "undici": "^7.10.0",
     "undici-types": "^7.10.0",
     "ws": "^8.18.2"
   },
   "devDependencies": {
-    "@vitest/coverage-v8": "3.1.4",
-    "prettier": "3.5.3",
-    "tsup": "8.5.0",
-    "vitest": "3.1.4"
+    "@vitest/coverage-v8": "^3.1.4",
+    "prettier": "^3.5.3",
+    "tsup": "^8.5.0",
+    "vitest": "^3.1.4"
   },
   "scripts": {
     "build": "tsup",
@@ -44,19 +43,8 @@
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "lint": "prettier --write ./src",
-    "clean": "rm -rf dist .turbo node_modules .turbo-tsconfig.json tsconfig.tsbuildinfo",
     "format": "prettier --write ./src",
-    "format:check": "prettier --check ./src"
-  },
-  "peerDependencies": {
-    "whatwg-url": "14.2.0"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "gitHead": "646c632924826e2b75c2304a75ee56959fe4a460",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/elizaos-plugins/plugin-twitter.git"
+    "format:check": "prettier --check ./src",
+    "clean": "rm -rf dist node_modules .turbo .turbo-tsconfig.json tsconfig.tsbuildinfo"
   }
 }
