--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -8,6 +8,5 @@
     "declaration": true,
     "emitDeclarationOnly": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
+  "include": ["src/**/*.ts"]
 }
