--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "vitest": "^3.1.4"
   },
   "scripts": {
-    "build": "tsup",
+    "build": "npm run clean && tsup",
+    "prepare": "npm run build",
     "dev": "tsup --watch",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
