--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "name": "twitter-client",
   "version": "1.0.0",
+  "description": "A Twitter client for agents",
   "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/default/cjs/index.js",
+  "types": "./dist/types/index.d.ts",
+
   "exports": {
-    "./package.json": "./package.json",
-    ".": {
-      "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      }
+    "default": {
+      "import": "./dist/default/esm/index.mjs",
+
+      "require": "./dist/default/cjs/index.js"
     }
   },
+
+  "scripts": {
+    "build": "rimraf dist && rollup -c",
+    "prepare": "npm run build",
+    "test": "vitest run"
+  },
+
   "files": [
     "dist"
   ],
@@ -32,20 +38,11 @@
     "ws": "^8.18.2"
   },
   "devDependencies": {
-    "@vitest/coverage-v8": "^3.1.4",
-    "prettier": "^3.5.3",
-    "tsup": "^8.5.0",
+    "rollup": "^4.0.0",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-esbuild": "^6.1.1",
+    "rimraf": "^5.0.1",
+    "typescript": "^5.2.2",
     "vitest": "^3.1.4"
-  },
-  "scripts": {
-    "build": "tsup",
-    "prepare": "npm run build",
-    "dev": "tsup --watch",
-    "test": "vitest run",
-    "test:coverage": "vitest run --coverage",
-    "lint": "prettier --write ./src",
-    "format": "prettier --write ./src",
-    "format:check": "prettier --check ./src",
-    "clean": "rm -rf dist node_modules .turbo .turbo-tsconfig.json tsconfig.tsbuildinfo"
   }
 }
